First DB version

--- a/ConAuction/App.config
+++ b/ConAuction/App.config
@@ -5,5 +5,6 @@
 		<add key="Cost" value="12"/>
 		<add key="StartId" value="11"/>
 		<add key="EndId" value="20"/>
+		<add key="ConnectionString" value="SERVER=Gondor;Port=3306;DATABASE=conauctiondb;UID=ConAuctionServer;PASSWORD=casTest1;" />
 	</appSettings>
-<startup><supportedRuntime version="v2.0.50727" sku="Client"/></startup></configuration>
+<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
