--- a/ConAuction/App.config
+++ b/ConAuction/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
 	<appSettings>
-		<add key="Path" value="C:\temp\ConAuction.txt"/>
+		<add key="Year" value="2014"/>
 		<add key="Cost" value="12"/>
 		<add key="StartId" value="11"/>
 		<add key="EndId" value="20"/>
