--- a/ConAuction/App.config
+++ b/ConAuction/App.config
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
 	<appSettings>
-		<add key="Year" value="2014"/>
+		<add key="Year" value="2015"/>
 		<add key="Cost" value="10"/>
+		<add key="CostFixed" value="5"/>
 		<add key="ConnectionString" value="SERVER=Gondor;Port=3306;DATABASE=conauctiondb;UID=ConAuctionServer;PASSWORD=casTest1;" />
 	</appSettings>
 <startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
