Added dialog for new customer.

--- a/ConAuction/App.config
+++ b/ConAuction/App.config
@@ -1,9 +1,17 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-		<add key="Year" value="2015"/>
-		<add key="Cost" value="10"/>
-		<add key="CostFixed" value="5"/>
+		<add key="Year" value="2015" />
+		<add key="Cost" value="10" />
+		<add key="CostFixed" value="5" />
 		<add key="ConnectionString" value="SERVER=Gondor;Port=3306;DATABASE=conauctiondb;UID=ConAuctionServer;PASSWORD=casTest1;" />
 	</appSettings>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<startup>
+	<supportedRuntime version="v2.0.50727" />
+</startup>
+<system.data>
+	<DbProviderFactories><remove invariant="MySql.Data.MySqlClient" />
+		<add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+	</DbProviderFactories>
+</system.data>
+</configuration>
