--- a/ConAuction/ConAuction.csproj
+++ b/ConAuction/ConAuction.csproj
@@ -38,7 +38,9 @@
     <ApplicationIcon>LinconAuktionLiten.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data">
+      <HintPath>..\packages\MySql.Data.6.9.8\lib\net20\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -51,6 +53,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer.cs" />
+    <Compile Include="FormEditCustomer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEditCustomer.Designer.cs">
+      <DependentUpon>FormEditCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormSendSMS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +92,9 @@
     <EmbeddedResource Include="FormEditProduct.resx">
       <DependentUpon>FormEditProduct.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormEditCustomer.resx">
+      <DependentUpon>FormEditCustomer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormProductDisplay.resx">
       <DependentUpon>FormProductDisplay.cs</DependentUpon>
     </EmbeddedResource>
@@ -106,6 +118,7 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
