--- a/ConAuction/ConAuction.csproj
+++ b/ConAuction/ConAuction.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel.cs" />
     <EmbeddedResource Include="FormEditProduct.resx">
       <DependentUpon>FormEditProduct.cs</DependentUpon>
     </EmbeddedResource>
