Added form for exporting to mail.

--- a/ConAuction/App.config
+++ b/ConAuction/App.config
@@ -5,7 +5,15 @@
 		<add key="Cost" value="10" />
 		<add key="CostFixed" value="5" />
 		<add key="ConnectionString" value="SERVER=Gondor;Port=3306;DATABASE=conauctiondb;UID=ConAuctionServer;PASSWORD=casTest1;" />
-	</appSettings>
+    <add key="MailServer" value="mail.facad.com" />
+    <add key="MailPort" value="25" />
+    <add key="MailUser" value="ile_blom" />
+    <add key="MailPassword" value="" />
+    <add key="MailSenderAddress" value="blom@post.com" />
+    <add key="MailSenderName" value="Anders Blom" />
+    <add key="MailSubject" value="Lincon auktionen" />
+
+  </appSettings>
 <startup>
 	<supportedRuntime version="v2.0.50727" />
 </startup>
