--- a/ConAuction/ConAuction.csproj
+++ b/ConAuction/ConAuction.csproj
@@ -53,6 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormSendMail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSendMail.Designer.cs">
+      <DependentUpon>FormSendMail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Customer.cs" />
     <Compile Include="FormEditCustomer.cs">
       <SubType>Form</SubType>
@@ -94,7 +100,11 @@
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendMail.cs" />
     <Compile Include="ViewModel.cs" />
+    <EmbeddedResource Include="FormSendMail.resx">
+      <DependentUpon>FormSendMail.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormEditProduct.resx">
       <DependentUpon>FormEditProduct.cs</DependentUpon>
     </EmbeddedResource>
