--- a/ConAuction/App.config
+++ b/ConAuction/App.config
@@ -1,25 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
 	<appSettings>
-		<add key="Year" value="2015" />
-		<add key="Cost" value="10" />
-		<add key="CostFixed" value="5" />
-		<add key="ConnectionString" value="SERVER=Gondor;Port=3306;DATABASE=conauctiondb;UID=ConAuctionServer;PASSWORD=casTest1;" />
-    <add key="MailServer" value="mail.facad.com" />
-    <add key="MailPort" value="25" />
-    <add key="MailUser" value="ile_blom" />
-    <add key="MailPassword" value="" />
-    <add key="MailSenderAddress" value="blom@post.com" />
-    <add key="MailSenderName" value="Anders Blom" />
-    <add key="MailSubject" value="Lincon auktionen" />
+		<add key="Year" value="2015"/>
+		<add key="Cost" value="10"/>
+		<add key="CostFixed" value="5"/>
+		<add key="ConnectionString" value="SERVER=Gondor;Port=3306;DATABASE=conauctiondb;UID=ConAuctionServer;PASSWORD=casTest1;"/>
+    <add key="MailServer" value="mail.facad.com"/>
+    <add key="MailPort" value="25"/>
+    <add key="MailUser" value="ile_blom"/>
+    <add key="MailPassword" value=""/>
+    <add key="MailSenderAddress" value="blom@post.com"/>
+    <add key="MailSenderName" value="Anders Blom"/>
+    <add key="MailSubject" value="Lincon auktionen"/>
 
   </appSettings>
 <startup>
-	<supportedRuntime version="v2.0.50727" />
-</startup>
+	
+<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup>
 <system.data>
-	<DbProviderFactories><remove invariant="MySql.Data.MySqlClient" />
-		<add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+	<DbProviderFactories><remove invariant="MySql.Data.MySqlClient"/>
+		<add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
 	</DbProviderFactories>
 </system.data>
 </configuration>
