--- a/ConAuction/App.config
+++ b/ConAuction/App.config
@@ -4,10 +4,10 @@
 		<add key="Year" value="2015"/>
 		<add key="Cost" value="10"/>
 		<add key="CostFixed" value="5"/>
-		<add key="ConnectionString" value="SERVER=Gondor;Port=3306;DATABASE=conauctiondb;UID=ConAuctionServer;PASSWORD=casTest1;"/>
+		<add key="ConnectionString" value="SERVER=Gondor;Port=3306;DATABASE=conauctiondb;UID=ConAuctionServer;PASSWORD=;"/>
     <add key="MailServer" value="mail.facad.com"/>
     <add key="MailPort" value="25"/>
-    <add key="MailUser" value="ile_blom"/>
+    <add key="MailUser" value=""/>
     <add key="MailPassword" value=""/>
     <add key="MailSenderAddress" value="blom@post.com"/>
     <add key="MailSenderName" value="Anders Blom"/>
