Minor fix for button and empty list.

--- a/ConAuction/App.config
+++ b/ConAuction/App.config
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <configuration>
 	<appSettings>
-		<add key="Year" value="2015"/>
+		<add key="Year" value="2017"/>
 		<add key="Cost" value="10"/>
 		<add key="CostFixed" value="5"/>
-		<add key="ConnectionString" value="SERVER=Gondor;Port=3306;DATABASE=conauctiondb;UID=ConAuctionServer;PASSWORD=;"/>
+		<add key="ConnectionString" value="SERVER=Gondor;Port=3306;DATABASE=conauctiondb;UID=ConAuctionServer;PASSWORD=casTest1;"/>
     <add key="MailServer" value="mail.facad.com"/>
     <add key="MailPort" value="25"/>
     <add key="MailUser" value=""/>
