--- a/ConAuction3/ConAuction3.csproj
+++ b/ConAuction3/ConAuction3.csproj
@@ -61,11 +61,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Views\CustomerDlg.xaml.cs">
+      <DependentUpon>CustomerDlg.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DataModels\Customer.cs" />
     <Compile Include="ViewModels\AuctionVM.cs" />
     <Compile Include="DataModels\DbAccess.cs" />
     <Compile Include="ViewModels\ProductListVM.cs" />
-    <Page Include="MainWindow.xaml">
+    <Page Include="Views\CustomerDlg.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -74,7 +81,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DataModels\Product.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
