--- a/ConAuction3/ConAuction3.csproj
+++ b/ConAuction3/ConAuction3.csproj
@@ -68,6 +68,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModels\CustomerListVM.cs" />
+    <Compile Include="ViewModels\MyCommand.cs" />
     <Compile Include="Views\CustomerDlg.xaml.cs">
       <DependentUpon>CustomerDlg.xaml</DependentUpon>
     </Compile>
