Moved OpMode to separate file.

--- a/ConAuction3/ConAuction3.csproj
+++ b/ConAuction3/ConAuction3.csproj
@@ -69,6 +69,7 @@
     </ApplicationDefinition>
     <Compile Include="ViewModels\CustomerListVM.cs" />
     <Compile Include="ViewModels\MyCommand.cs" />
+    <Compile Include="ViewModels\OpMode.cs" />
     <Compile Include="Views\CustomerDlg.xaml.cs">
       <DependentUpon>CustomerDlg.xaml</DependentUpon>
     </Compile>
