--- a/ConAuction3/ConAuction3.csproj
+++ b/ConAuction3/ConAuction3.csproj
@@ -73,9 +73,11 @@
     <Compile Include="Converters\BoolToValueConverter.cs" />
     <Compile Include="Converters\NullToVisibilityConverter.cs" />
     <Compile Include="Converters\StringNullOrEmptyToVisibilityConverter.cs" />
+    <Compile Include="Utilities\SendMail.cs" />
+    <Compile Include="Utilities\SendSMS.cs" />
     <Compile Include="ViewModels\CustomerListVM.cs" />
-    <Compile Include="ViewModels\MyCommand.cs" />
-    <Compile Include="ViewModels\OpMode.cs" />
+    <Compile Include="Utilities\MyCommand.cs" />
+    <Compile Include="Utilities\OpMode.cs" />
     <Compile Include="Views\CustomerDlg.xaml.cs">
       <DependentUpon>CustomerDlg.xaml</DependentUpon>
     </Compile>
