--- a/ConAuction3/packages.config
+++ b/ConAuction3/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MySql.Data" version="6.9.8" targetFramework="net45" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net452" />
+  <package id="MySql.Data" version="6.9.8" targetFramework="net452" />
   <package id="WPFTextBoxAutoComplete" version="1.0.5" targetFramework="net452" />
 </packages>
