--- a/ConAuction3/App.config
+++ b/ConAuction3/App.config
@@ -15,6 +15,7 @@
     <add key="LabelPage1" value="False" />
     <add key="LabelPage2" value="False" />
     <add key="LabelPage3" value="False" />
+    <add key="JumbleLabelStart" value="300" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
