Added creation of buyer receipt.

--- a/ConAuction3/ConAuction3.csproj
+++ b/ConAuction3/ConAuction3.csproj
@@ -116,6 +116,9 @@
     <Compile Include="Views\PromptDialog.xaml.cs">
       <DependentUpon>PromptDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ReceiptBrowserWindow.xaml.cs">
+      <DependentUpon>ReceiptBrowserWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="Views\BidDlg.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -150,6 +153,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\PromptDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ReceiptBrowserWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
