--- a/ConAuction3/App.config
+++ b/ConAuction3/App.config
@@ -12,6 +12,7 @@
     <add key="MailSenderAddress" value="blom@post.com"/>
     <add key="MailSenderName" value="Anders Blom"/>
     <add key="MailSubject" value="Lincon auktionen"/>
+    <add key="ReceiptResponsible" value="Anders Blom 070-554 21 20"/>
     <add key="LabelPage1" value="False" />
     <add key="LabelPage2" value="False" />
     <add key="LabelPage3" value="False" />
